The future Forecast component styling has been changed based on developers discretion and Now the future Forecast component gets rendered with new styling for each location that the relevant button gets pressed for. The only issue with the component is that the future Forecast window for the main marker, just like the weather card for the main marker doesn't get removed once a new location is selected. Instead, it gets covered over by the new one.

--- a/Pages/Mainpage/index.css
+++ b/Pages/Mainpage/index.css
@@ -130,7 +130,7 @@ body {
     transition-delay: 0.5s;
 }
 
-.card-container .center-card.hovering {
+.card-container .center-card.hovering  {
     top: 60px;
     bottom: 110px;
     transition-delay: 0s;
@@ -314,7 +314,6 @@ body {
 .future-forecast-container{
     position: absolute;
     background-color: white;
-    position: absolute;
     left: 6.8rem;
     top: 3.6rem;
 }
